Teste de lauch do apk sem o player do youtube.

--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
       "cordova-plugin-ionic-webview": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
